--- a/flare/mods/default/languages/engine.zh.po
+++ b/flare/mods/default/languages/engine.zh.po
@@ -1446,11 +1446,11 @@ msgstr "下一等級:"
 
 #: ../../../src/MenuStash.cpp:54
 msgid "Private"
-msgstr "私人的"
+msgstr "私人"
 
 #: ../../../src/MenuStash.cpp:56
 msgid "Shared"
-msgstr "分享的"
+msgstr "共用"
 
 #: ../../../src/MenuStash.cpp:104
 msgid "Stash"
@@ -1460,7 +1460,11 @@ msgstr "儲藏箱"
 msgid "Can not store quest items in the stash."
 msgstr "無法在儲藏箱中存放任務物品."
 
-#: ../../../src/MenuStash.cpp:264
+#: ../../../src/MenuStash.cpp:264 ...
+msgid "This item can not be stored in the private stash."
+msgstr "此物品無法存放在私人儲藏箱中."
+msgid "This item can not be stored in the shared stash."
+msgstr "此物品無法存放在共用儲藏箱中."
 msgid "This item can not be stored in the stash."
 msgstr "此物品無法存放在儲藏箱中."
 
